--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
     "version": "1.0.0",
     "description": "Gynergy Member Portal MVP using Next.js 13, NextAuth, Supabase, & optional OpenAI Vision.",
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "@next-auth/supabase-adapter": "^0.3.0",
-      "@supabase/supabase-js": "^2.17.0",
-      "@types/node": "^18.16.0",
-      "@types/react": "^18.0.28",
-      "@types/react-dom": "^18.0.11",
-      "next": "13.4.12",
-      "next-auth": "^4.22.1",
-      "openai": "^3.2.1",
-      "react": "18.2.0",
-      "react-dom": "18.2.0",
-      "typescript": "^5.0.4"
+        "@supabase/ssr": "latest",
+        "@supabase/supabase-js": "^2.39.0",
+        "@types/node": "^20.0.0",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
+        "next": "^14.1.0",
+        "next-auth": "^4.24.0",
+        "openai": "^4.0.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "^5.3.0"
     },
     "devDependencies": {
-      "eslint": "8.40.0",
-      "eslint-config-next": "13.4.12"
+        "eslint": "^8.55.0",
+        "eslint-config-next": "^14.1.0"
     }
-  }
+}
