--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,33 @@
 {
     "compilerOptions": {
-      "target": "es2020",
+      "target": "es2022",
       "lib": ["dom", "dom.iterable", "esnext"],
       "allowJs": true,
       "skipLibCheck": true,
       "strict": true,
       "forceConsistentCasingInFileNames": true,
+      "noEmit": true,
+      "esModuleInterop": true,
       "module": "esnext",
-      "moduleResolution": "node",
+      "moduleResolution": "bundler",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "esModuleInterop": true,
-      "jsx": "react-jsx",
-      "noEmit": true
+      "jsx": "preserve",
+      "incremental": true,
+      "plugins": [
+        {
+          "name": "next"
+        }
+      ],
+      "paths": {
+        "@/*": ["./*"]
+      }
     },
     "include": [
       "next-env.d.ts",
       "**/*.ts",
-      "**/*.tsx"
+      "**/*.tsx",
+      ".next/types/**/*.ts"
     ],
     "exclude": [
       "node_modules"
